--- a/tomu.html
+++ b/tomu.html
@@ -12,7 +12,7 @@
         <header>
             <div class="container">
                 <div class="header-left">
-                    <img class="logo" src="file:///Users/motyu20/Downloads/logo%20(3).png">
+                    <img class="logo" src="log(3).png">
                 </div>
                 <a href="#" class="menu-icon">
                     <span class="fa fa-bars menu-icon"></span>
