--- a/tomu.html
+++ b/tomu.html
@@ -152,13 +152,12 @@
         <div id="contact" class="contact-section gray-section">
             <div class="contact-section-inner">
               <div class="container">
-                <?php include 'sent.php'; ?>
                 <div class="section-title">
                   <h3>お問い合わせ</h3>
                 </div>
                 <div class="contact-form">
                   <h4>メッセージを送る</h4>
-                  <form method="post" action="sent.php">
+                  <form method="post" action="sent.html">
                     <form>
                       <div class="error-message"></div>
                       <input type="text" name="name" placeholder="お名前" class="contact-name">
