--- a/index.html
+++ b/index.html
@@ -154,7 +154,6 @@
               <div class="container">
                 <div class="section-title">
                   <h3>お問い合わせ</h3>
-                </div>
                 <div class="contact-form">
                   <h4>メッセージを送る</h4>
                   <form method="post" action="sent.html">
@@ -165,7 +164,7 @@
                       <input type="text" name="email" placeholder="メールアドレス" class="contact-email">
                       <div class="error-message"></div>
                       <textarea name="message" placeholder="メッセージ内容"></textarea>
-                      <button type="submit" class="btn btn-contact">送信</button>
+                      <button type="submit" class="btn btn-contact" href="sent.html">送信</button>
                     </form>
                   </form>
                 </div>　
